<resources>
    <string name="app_name" translatable="false">Support Ticket App</string>
    <string name="app_version" translatable="false">v1.0</string>
    <string name="app_info">© 2022 Patelis - Ploumpis</string>

    <!-- Description -->
    <string name="description_imageView_support_ticket_logo" translatable="false">Support Ticket Logo</string>
    <string name="description_imageView_new_ticket_icon" translatable="false">New Ticket Icon</string>
    <string name="description_imageView_pdf_file_icon" translatable="false">PDF File Icon</string>
    <string name="description_imageView_delete_file_icon" translatable="false">Delete File Icon</string>
    <string name="description_imageView_email_file_icon" translatable="false">Email File Icon</string>
    <string name="description_imageView_technician_icon" translatable="false">Technician Icon</string>
    <string name="description_menu_technicians">Technicians List</string>
    <string name="description_menu_exit">Exit</string>

    <!-- Buttons -->
    <string name="button_new_ticket">New Ticket</string>
    <string name="button_view_tickets">View Tickets</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <!-- Labels for TextView -->
    <string name="label_technician"><u>Technician</u></string>
    <string name="label_client"><u>Client</u></string>
    <string name="label_support_ticket_number" translatable="false">Ticket#</string>
    <string name="label_support_ticket_client_name">Client Name</string>
    <string name="label_support_ticket_date">YYYY/MM/DD</string>

    <!-- Hints for EditText-->
    <string name="hint_ticket_id" translatable="false">Ticket ID</string>
    <string name="hint_technician_name">Technician\'s Name</string>
    <string name="hint_client_name">Client\'s Name</string>
    <string name="hint_client_address">Client\'s Address</string>
    <string name="hint_client_phone">Client\'s Phone Number</string>
    <string name="hint_client_email">Client\'s Email</string>
    <string name="hint_labor_date">Labor Date</string>
    <string name="hint_labor_hours">Labor Hours</string>
    <string name="hint_labor_type">Labor Type</string>
    <string name="hint_labor_description">Labor Description</string>
    <string name="label_labor"><u>Labor</u></string>
</resources>