<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/layout_background_list_item">

    <ImageView
        android:id="@+id/imageView_technician_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/description_imageView_technician_icon"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/technician_color_64px" />

    <TextView
        android:id="@+id/textView_technician_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/hint_technician_name"
        android:textColor="@color/blue_gray_800"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_technician_icon"
        app:layout_constraintTop_toTopOf="@+id/imageView_technician_icon" />

    <ImageView
        android:id="@+id/imageView_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        android:contentDescription="@string/description_imageView_delete_file_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>